[package]
name = "daila-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
crossterm = "0.26.1"
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"] }
tui = "0.19.0"
