[package]
name = "daila"
version = "0.1.0"
edition = "2021"
authors = ["devinleamy <devinleamy@gmail.com>"]
license = "MIT"
description = "CLI for tracking and visualizing daily activities."
readme = "README.md"
homepage = "https://github.com/devinleamy/daila"
repository = "https://github.com/DevinLeamy/daila"
keywords = ["cli", "data", "visualization", "daily", "heatmap"]

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
crossterm = "0.26.1"
directories = "5.0.0"
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
ratatui = "0.20.1"

